Fix NASA Space Apps footer spacing

--- a/src/CollabScience.Api/wwwroot/matches/styles.css
+++ b/src/CollabScience.Api/wwwroot/matches/styles.css
@@ -5,3 +5,8 @@
 #no-profile-message {
     display: none;
 }
+
+.container {
+    position: relative;
+    padding-bottom: 3em;
+}
